--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,17 @@
+html, body {
+  font-family: 'Ubuntu Mono', monospace;
+  font-size: 100%; }
+
+header {
+  background-color: #000;
+  color: #fff;
+  text-align: center;
+  height: 40px;
+  line-height: 40px;
+  font-size: 1.5em; }
+
 input::-webkit-inner-spin-button {
   -webkit-appearance: none; }
 
 #charts {
-  width: 75%;
-  height: 400px; }
+  width: 100%; }
