--- a/css/style.css
+++ b/css/style.css
@@ -10,8 +10,14 @@ header {
   line-height: 40px;
   font-size: 1.5em; }
 
+main {
+  margin: 0 15px; }
+
 input::-webkit-inner-spin-button {
   -webkit-appearance: none; }
 
 #charts {
   width: 100%; }
+  #charts th {
+    background-color: #000;
+    color: #fff; }
