--- a/css/style.css
+++ b/css/style.css
@@ -8,10 +8,30 @@ header {
   text-align: center;
   height: 40px;
   line-height: 40px;
-  font-size: 1.5em; }
+  font-size: 1.5em;
+  margin-bottom: 20px; }
 
 main {
   margin: 0 15px 20px; }
+  main section:first-of-type {
+    text-align: center; }
+    main section:first-of-type div {
+      text-align: left;
+      display: inline-block;
+      vertical-align: top; }
+      main section:first-of-type div input {
+        font-size: 1.3em;
+        padding: 3px 5px;
+        border: 2px solid #555555; }
+      main section:first-of-type div #searchTopic {
+        margin: 8px 2px;
+        width: 250px; }
+      main section:first-of-type div #resultsCount {
+        width: 50px; }
+
+label {
+  display: block;
+  margin: 0 2px 10px; }
 
 a {
   text-decoration: none;
@@ -23,11 +43,30 @@ a:hover {
 input::-webkit-inner-spin-button {
   -webkit-appearance: none; }
 
+button {
+  background-color: #7cb5ec;
+  border: none;
+  width: 50px;
+  height: 50px;
+  padding: 0;
+  border-radius: 100%;
+  color: #fff;
+  font-size: 1.3em; }
+
+button:hover {
+  background-color: #95ceff; }
+
 .center {
   margin: 0 auto; }
 
 .textCenter {
   text-align: center; }
+
+.pointer {
+  cursor: pointer; }
+
+.grey {
+  background-color: #555555; }
 
 #charts {
   width: 100%; }
