--- a/css/style.scss
+++ b/css/style.scss
@@ -1,7 +1,8 @@
-$grey: #707070;
+$grey: #555555;
 $lightBlue: #7cb5ec;
 $hoverBlue: #95ceff;
 
+//// tag styles ////
 html, body {
 	font-family: 'Ubuntu Mono', monospace;
 	font-size: 100%;
@@ -14,10 +15,37 @@ header {
 	height: 40px;
 	line-height: 40px;
 	font-size: 1.5em;
+	margin-bottom: 20px;
 }
 
 main {
 	margin: 0 15px 20px;
+	section:first-of-type {
+		text-align: center;
+		div {
+			text-align: left;
+			display: inline-block;
+			vertical-align: top;
+			input {
+				font-size: 1.3em;
+				padding: 3px 5px;
+				border: 2px solid $grey;
+			}
+			#searchTopic {
+				margin: 8px 2px;
+				width: 250px;
+			}
+			#resultsCount {
+				width: 50px;
+			}
+		}
+	}
+}
+
+label {
+	display: block;
+	margin: 0 2px 10px;
+	
 }
 
 a {
@@ -34,6 +62,23 @@ input::-webkit-inner-spin-button {
 	-webkit-appearance: none;
 }
 
+button {
+	background-color: $lightBlue;
+	border: none;
+	width: 50px;
+	height: 50px;
+	padding: 0;
+	border-radius: 100%;
+	color: #fff;
+	font-size: 1.3em;
+}
+
+button:hover {
+	background-color: $hoverBlue;
+}
+
+
+//// class stylings ////
 .center {
 	margin: 0 auto;
 }
@@ -42,6 +87,16 @@ input::-webkit-inner-spin-button {
 	text-align: center;
 }
 
+.pointer {
+	cursor: pointer;
+}
+
+.grey {
+	background-color: $grey;
+}
+
+
+//// chart styles ////
 #charts {
 	width: 100%;
 
