--- a/css/style.scss
+++ b/css/style.scss
@@ -22,6 +22,7 @@ main {
 	margin: 0 15px 20px;
 	section:first-of-type {
 		text-align: center;
+		margin-bottom: 20px;
 		div {
 			text-align: left;
 			display: inline-block;
