--- a/css/style.css
+++ b/css/style.css
@@ -70,17 +70,25 @@ button:hover {
   background-color: #555555; }
 
 #charts {
-  width: 100%; }
+  width: 100%;
+  /*
+  	.tooltip:hover span::after {
+  		position: fixed;
+  		border: solid;
+  		border-color: rgba(249,249,249,.85) transparent;
+  		border-width: 8px 8px 0;
+  		margin: 15px 0 0 -120px;
+  		content: "";
+  	}
+  */ }
+  #charts p, #charts #table3, #charts .tooltip > span {
+    display: none; }
   #charts th {
     background-color: #555555;
     color: #fff; }
-  #charts th, #charts td {
-    padding: 5px 10px; }
-  #charts tr > td:first-of-type:hover::after,
-  #charts .studiesTitle:hover::after,
-  #charts .studiesScore:hover::after,
-  #charts .studiesDate:hover::after {
-    position: absolute;
+  #charts .tooltip:hover span {
+    display: block;
+    position: fixed;
     background-color: rgba(249, 249, 249, 0.85);
     color: #000;
     padding: 3px 5px;
@@ -89,9 +97,5 @@ button:hover {
     box-shadow: 1px 1px 3px 1px rgba(0, 0, 0, 0.4);
     font-size: .8em;
     z-index: 10; }
-  #charts tr > td:first-of-type:hover::after {
-    content: attr(data-tooltip); }
-  #charts .studiesTitle:hover::after,
-  #charts .studiesScore:hover::after,
-  #charts .studiesDate:hover::after {
-    content: "ascending/descending"; }
+  #charts th, #charts td {
+    padding: 5px 10px; }
