--- a/css/style.scss
+++ b/css/style.scss
@@ -100,21 +100,16 @@ button:hover {
 //// chart styles ////
 #charts {
 	width: 100%;
-
+	p, #table3, .tooltip > span {
+		display: none;
+	}
 	th {
 		background-color: $grey;
 		color: #fff;
 	}
-	
-	th,td {
-		padding: 5px 10px;
-	}
-	
-	tr > td:first-of-type:hover::after,
-	.studiesTitle:hover::after,
-	.studiesScore:hover::after,
-	.studiesDate:hover::after {
-		position: absolute;
+	.tooltip:hover span {
+		display: block;
+		position: fixed;
 		background-color: rgba(249,249,249,.85);
 		color: #000;
 		padding: 3px 5px;
@@ -124,14 +119,18 @@ button:hover {
 		font-size: .8em;
 		z-index: 10;
 	}
-	
-	tr > td:first-of-type:hover::after, {
-		content: attr(data-tooltip);
+
+/*
+	.tooltip:hover span::after {
+		position: fixed;
+		border: solid;
+		border-color: rgba(249,249,249,.85) transparent;
+		border-width: 8px 8px 0;
+		margin: 15px 0 0 -120px;
+		content: "";
 	}
-		
-	.studiesTitle:hover::after,
-	.studiesScore:hover::after,
-	.studiesDate:hover::after {
-		content: "ascending/descending";
+*/
+	th,td {
+		padding: 5px 10px;
 	}
 }
